--- a/styles/index.css
+++ b/styles/index.css
@@ -57,6 +57,10 @@ video {
     left: 0;
 }
 
+.header-logo-a {
+    color: black;
+}
+
 .logo{
     display: flex;
     align-items: center;
@@ -262,7 +266,7 @@ header nav {
 }
 
 .curr-img {
-    width: 850px;
+    width: 1050px;
     height: 450px;
     object-fit: cover;
 }
@@ -328,7 +332,7 @@ iframe {
 }
 
 .height {
-    height: 500px;
+    height: 375px;
 }
 
 footer {
